--- a/02-Listas-Navegacao/styles/produtos.css
+++ b/02-Listas-Navegacao/styles/produtos.css
@@ -28,6 +28,11 @@ nav a {
     text-decoration: none;
 }
 
+nav a:hover {
+    color: #C78C19;
+    text-decoration: underline;
+}
+
 .produtos {
     width: 940px;
     margin: 0 auto;
@@ -42,6 +47,21 @@ nav a {
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
+    border: 5px solid #000;
+    border-radius: 10px;
+}
+
+.produtos li:hover { 
+    border-color:  #C78C19;
+    cursor: pointer;
+}
+
+.produtos li:active { 
+    border-color:  #088c19;
+}
+
+.produtos li:active h2 { 
+    font-size: 34px;   
 }
 
 .produtos h2 {
