--- a/03-Formularios-tabelas/styles/style.css
+++ b/03-Formularios-tabelas/styles/style.css
@@ -133,3 +133,18 @@ form label,form legend{
     background: darkorange;    
     transform:scale(1.1);
 }
+
+table{
+    margin:20px 0 40px
+}
+thead{
+background: #555555;
+color: white;
+font-weight: bold;
+}
+
+th,td{
+    border: 1px solid #000;
+    padding: 8px 15px;
+
+}
